Steps to reproduce: 1. Open attachment 130490 [details] from bug 105380 2. Save it to ODP 3. Open the new generated file -> The image on the right is completely white Reproduced in Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community Build ID: 9b9159aa9073318c6892787d721b8cd732525972 CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3 Locale: de-DE (es_ES.UTF-8); UI: en-US Calc: threaded [Bug found by office-interoperability-tools]
Regression introduced by: author Sarper Akdemir <sarper.akdemir@collabora.com> 2022-09-19 09:56:57 +0300 committer Miklos Vajna <vmiklos@collabora.com> 2022-09-20 08:29:29 +0200 commit 9ecc76988ec46ba0d6c5cb72ac88f65da48867b1 (patch) tree 86a1409d99ad0a0b724ebd92ba6658d411dbc045 parent 4616f006df9497a8beaeb9181368b8708f1eeedc (diff) tdf#89928 pptx import: implement import of BiLevel threshold Bisected with: bibisect-linux64-7.5 Adding Cc: to Sarper Akdemir
Sarper Akdemir committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/c010b8cc712d1336ed79fb220764f1a850dc22e5 tdf#153180: PngImageWriter add support for gray alpha colortype It will be available in 7.6.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Verified in Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community Build ID: 288c0920a8475f9f2c537212e04aa7649192ad8c CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3 Locale: en-US (es_ES.UTF-8); UI: en-US Calc: threaded @Sarper Akdemir, thanks for fixing this issue. Should it be closed as RESOLVED FIXED ?
Yes :) Updated the status now.