tdf#153180: PngImageWriter add support for gray alpha colortype

8 bit grayscale images can have alpha accompanying it, and
PNG supports 2 channel gray-alpha images.

libpng supports this with the use of colortype
PNG_COLOR_TYPE_GRAY_ALPHA.

This patch adds support for writing GRAY_ALPHA colorType PNG
images.

This is done by expanding what was in place for
ScanlineFormat::N24BitTcRgb with alpha PNG_COLOR_TYPE_RGBA.

Change-Id: I80d462d784f91529eb9371c6bdb029c78f32f81e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146138
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>